crates/rooch-framework-tests/tests/cases/private_generics/verify_private_generics_in_primitive_types.exp
processed 3 tasks

task 1 'publish'. lines 3-106:
error: resource type "Address" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:34:9
   │
34 │         bar<address>();
   │         ^^^^^^^^^^^^^^

error: resource type "Bool" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:13:9
   │
13 │         bar<bool>();
   │         ^^^^^^^^^^^

error: resource type "ObjectID" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:40:9
   │
40 │         bar<ObjectID>();
   │         ^^^^^^^^^^^^^^^

error: resource type "Signer" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:43:9
   │
43 │         bar<signer>();
   │         ^^^^^^^^^^^^^

error: resource type "String" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:37:9
   │
37 │         bar<String>();
   │         ^^^^^^^^^^^^^

error: resource type "U128" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:28:9
   │
28 │         bar<u128>();
   │         ^^^^^^^^^^^

error: resource type "U16" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:19:9
   │
19 │         bar<u16>();
   │         ^^^^^^^^^^

error: resource type "U256" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:31:9
   │
31 │         bar<u256>();
   │         ^^^^^^^^^^^

error: resource type "U32" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:22:9
   │
22 │         bar<u32>();
   │         ^^^^^^^^^^

error: resource type "U64" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:25:9
   │
25 │         bar<u64>();
   │         ^^^^^^^^^^

error: resource type "U8" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:16:9
   │
16 │         bar<u8>();
   │         ^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:79:9
   │
79 │         bar<vector<StructT>>();
   │         ^^^^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:67:9
   │
67 │         bar<vector<address>>();
   │         ^^^^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:46:9
   │
46 │         bar<vector<bool>>();
   │         ^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:73:9
   │
73 │         bar<vector<ObjectID>>();
   │         ^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:76:9
   │
76 │         bar<vector<signer>>();
   │         ^^^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:70:9
   │
70 │         bar<vector<String>>();
   │         ^^^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:61:9
   │
61 │         bar<vector<u128>>();
   │         ^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:52:9
   │
52 │         bar<vector<u16>>();
   │         ^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:64:9
   │
64 │         bar<vector<u256>>();
   │         ^^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:55:9
   │
55 │         bar<vector<u32>>();
   │         ^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:58:9
   │
58 │         bar<vector<u64>>();
   │         ^^^^^^^^^^^^^^^^^^

error: resource type "Vector" in function "0x42::test::bar" not defined in current module or not allowed
   ┌─ /tmp/tempfile:49:9
   │
49 │         bar<vector<u8>>();
   │         ^^^^^^^^^^^^^^^^^

status EXECUTED

task 2 'run'. lines 108-137:
status EXECUTED
